fix: adjust padding and gap in shelf styles for improved layout

--- a/src/styles/shelf.module.css
+++ b/src/styles/shelf.module.css
@@ -9,13 +9,11 @@
     background: linear-gradient(to top, #ffffff04 0px, #80696900 80px);
     border-radius: 16px;
     box-shadow: 0px 0px 20px #00000066;
+    padding: 30px;
+    gap: 20px 25px;
 }
 
 .shelfItemWrapper {
-    margin-left: 1%;
-    margin-right: 1%;
-    margin-top: 1%;
-    margin-bottom: 1%;
     width: fit-content;
     height: fit-content;
 
@@ -35,8 +33,7 @@
     background-size: cover;
     background-position: center;
     text-align: center;
-    padding-block: 0.35em 0.625em;
-    padding-inline: 0.75em;
+    padding: 10px 24px 20px 24px;
     margin: 0;
 
     &:hover {
